--- a/res/layout/activity_yue_lu_system_settings.xml
+++ b/res/layout/activity_yue_lu_system_settings.xml
@@ -5,15 +5,15 @@
     android:background="#F3F5F4"
     android:orientation="vertical" >
 
-    <!-- 通用设置界面 -->
+    <!-- 标题 -->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/black" >
-<!-- 标题 -->
+
         <ImageView
-            android:id="@+id/set_usual_image_to_return"
+            android:id="@+id/system_settings_image_to_return"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/usual_set"
+            android:text="@string/system_set"
             android:textColor="@color/write"
             android:textSize="18sp" />
     </RelativeLayout>
@@ -42,9 +42,122 @@
         android:layout_height="wrap_content"
         android:background="@color/write"
         android:orientation="vertical" >
-<!-- 字号设置 -->
+
         <LinearLayout
-            android:id="@+id/set_usual_linear_textsize_set"
+            android:id="@+id/system_settings_linear_manager"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/account_manager"
+                android:textColor="#383838"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:background="#D9D9D9" />
+
+        <LinearLayout
+            android:id="@+id/system_settings_linear_safety"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/account_safety"
+                android:textColor="#383838"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:background="#D9D9D9" />
+
+        <LinearLayout
+            android:id="@+id/system_settings_linear_usual_set"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/usual_set"
+                android:textColor="#383838"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginBottom="10dp"
+        android:background="#E2E4E3" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#E2E4E3" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/write"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/system_settings_linear_clear_cache"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:background="@color/write"
@@ -57,15 +170,15 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
-                android:text="@string/textsize_set" />
+                android:text="@string/clear_cache" />
 
             <TextView
-                android:id="@+id/set_usual_text_size"
+                android:id="@+id/system_settings_text_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/small"
+                android:text="300M"
                 android:textColor="@color/main_text"
-                android:textSize="13sp" />
+                android:textSize="12sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -84,12 +197,12 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:background="#D9D9D9" />
-        <!-- 备注信息 -->
 
         <LinearLayout
-            android:id="@+id/set_usual_linear_remark"
+            android:id="@+id/system_settings_linear_private_set"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
@@ -99,20 +212,17 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="@string/display_beizhu"
-                android:textColor="@color/main_title_text"
-                android:textSize="14sp" />
+                android:text="@string/private_set" />
 
-            <CheckBox
-                android:id="@+id/set_usual_check_box_remark"
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/selector_chack_box_slide_switches"
-                android:button="@null"
-                android:checked="false" />
+                android:layout_marginStart="10dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
         </LinearLayout>
 
         <View
@@ -121,12 +231,12 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:background="#D9D9D9" />
-        <!-- 快速拖动 -->
 
         <LinearLayout
-            android:id="@+id/set_usual_linear_start_fast"
+            android:id="@+id/system_settings_linear_question_back"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
@@ -136,20 +246,17 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="@string/start_fast_move"
-                android:textColor="@color/main_title_text"
-                android:textSize="14sp" />
+                android:text="@string/question_back" />
 
-            <CheckBox
-                android:id="@+id/set_usual_check_box_start_fast"
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/selector_chack_box_slide_switches"
-                android:button="@null"
-                android:checked="true" />
+                android:layout_marginStart="10dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
         </LinearLayout>
     </LinearLayout>
 
@@ -163,10 +270,9 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#E2E4E3" />
-    <!-- 横竖屏切换 -->
 
     <LinearLayout
-        android:id="@+id/set_usual_linear_portrait"
+        android:id="@+id/system_settings_linear_about_us"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@color/write"
@@ -179,20 +285,17 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/portrait_landscape"
-            android:textColor="@color/main_title_text"
-            android:textSize="14sp" />
+            android:text="@string/about_us" />
 
-        <CheckBox
-            android:id="@+id/set_usual_check_box_portrait"
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="15dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/selector_chack_box_slide_switches"
-            android:button="@null"
-            android:checked="true" />
+            android:layout_marginStart="10dp"
+            android:contentDescription="@drawable/right_arrow_icon"
+            android:src="@drawable/right_arrow_icon" />
     </LinearLayout>
 
     <View
@@ -201,9 +304,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:background="#D9D9D9" />
-<!-- 声音与振动 -->
+
     <LinearLayout
-        android:id="@+id/set_usual_linear_sound_vibrate"
+        android:id="@+id/system_settings_linear_exit_assount"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@color/write"
@@ -216,10 +319,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/sound_vibrate"
-            android:textColor="@color/main_title_text"
-            android:textSize="14sp" />
+            android:text="@string/exit_account" />
 
         <ImageView
             android:layout_width="wrap_content"
