--- a/res/layout/view_personal_information.xml
+++ b/res/layout/view_personal_information.xml
@@ -102,8 +102,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="2dp"
                 android:layout_marginStart="5dp"
-                android:contentDescription="@drawable/win_kills"
-                android:src="@drawable/win_kills" />
+                android:contentDescription="@drawable/win_assists"
+                android:src="@drawable/win_assists" />
 
             <TextView
                 android:id="@+id/view_personal_informat_text_win_assists"
